--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body class="page">
     <div class="page__content">
-      <header class="header .page__content">
+      <header class="header">
         <img
           class="header__logo"
           src="./images/logo.svg"
@@ -18,7 +18,7 @@
         />
       </header>
       <main class="content">
-        <section class="profile .page__content">
+        <section class="profile">
           <img class="profile__avatar" src="./images/Avatar.png" alt="Avatar" />
           <div class="profile__info">
             <div class="profile__name-button">
@@ -29,8 +29,8 @@
           </div>
           <button class="profile__button-add"></button>
         </section>
-        <section class="cards .page__content">
-          <ul class="card__list">
+        <section class="cards">
+          <ul class="cards__list">
             <li class="card">
               <img
                 src="./images/yosemite.jpg"
